--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<p>Hello World (open the log to see the error)</p>
+<p>Hello World (open the console to see the error)</p>
 
 </body>
   
